--- a/.github/workflows/deploying_website.yaml
+++ b/.github/workflows/deploying_website.yaml
@@ -28,6 +28,6 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ bootcampapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ bootcamp21.surge.sh --token ${{secrets.SURGE_TOKEN}}
         
      
